# libfreenect2

./: .cproject  .gitignore  .gitmodules  .project  APACHE20  CHANGELOG.rst  CMakeLists.txt  CONTRIB  Doxyextra.css  Doxyfile  Doxyfile.in  PKGBUILD  README.md  README.txt  annotated.html  classes.html  classlibfreenect2_1_1CpuPacketPipeline-members.html  classlibfreenect2_1_1CpuPacketPipeline.html  classlibfreenect2_1_1DumpPacketPipeline-members.html  classlibfreenect2_1_1DumpPacketPipeline.html  classlibfreenect2_1_1Frame-members.html  classlibfreenect2_1_1Frame.html  classlibfreenect2_1_1FrameListener-members.html  classlibfreenect2_1_1FrameListener.html  classlibfreenect2_1_1Freenect2-members.html  classlibfreenect2_1_1Freenect2.html  classlibfreenect2_1_1Freenect2Device-members.html  classlibfreenect2_1_1Freenect2Device.html  classlibfreenect2_1_1Logger-members.html  classlibfreenect2_1_1Logger.html  classlibfreenect2_1_1OpenCLPacketPipeline-members.html  classlibfreenect2_1_1OpenCLPacketPipeline.html  classlibfreenect2_1_1OpenGLPacketPipeline-members.html  classlibfreenect2_1_1OpenGLPacketPipeline.html  classlibfreenect2_1_1PacketPipeline-members.html  classlibfreenect2_1_1PacketPipeline.html  classlibfreenect2_1_1Registration-members.html  classlibfreenect2_1_1Registration.html  classlibfreenect2_1_1SyncMultiFrameListener-members.html  classlibfreenect2_1_1SyncMultiFrameListener.html  (+40 more)
.github/: ISSUE_TEMPLATE.md
0.1/: classes.html  classlibfreenect2_1_1CpuPacketPipeline.html  classlibfreenect2_1_1FrameListener-members.html  classlibfreenect2_1_1FrameListener.html  classlibfreenect2_1_1Freenect2.html  classlibfreenect2_1_1Freenect2Device-members.html  classlibfreenect2_1_1Freenect2Device.html  classlibfreenect2_1_1Logger.html  classlibfreenect2_1_1OpenCLPacketPipeline-members.html  classlibfreenect2_1_1OpenGLPacketPipeline-members.html  classlibfreenect2_1_1OpenGLPacketPipeline.html  classlibfreenect2_1_1Registration.html  classlibfreenect2_1_1SyncMultiFrameListener-members.html  files.html  functions_enum.html  functions_func.html  functions_type.html  functions_vars.html  group__device.html  group__frame.html  group__pipeline.html  group__registration.html  index.html  libfreenect2_8hpp.html  logger_8h.html  modules.html  namespacemembers_func.html  namespacemembers_type.html  registration_8h.html  (+3 more)
OpenNI2-Freenect2Driver/: CMakeLists.txt
OpenNI2-FreenectDriver/: CMakeLists.txt
OpenNI2-FreenectDriver/src/: ColorStream.cpp  ColorStream.hpp  DepthStream.cpp  DepthStream.hpp  DeviceDriver.cpp  IrStream.cpp  IrStream.hpp  Registration.cpp  Registration.hpp  VideoStream.hpp
drivers/OpenNI2-Freenect2Driver/: CMakeLists.txt  README.md
drivers/OpenNI2-Freenect2Driver/src/: ColorStream.cpp  ColorStream.hpp  D2S.h  DepthStream.cpp  DepthStream.hpp  DeviceDriver.cpp  IrStream.cpp  IrStream.hpp  Registration.cpp  Registration.hpp  S2D.h  Utility.hpp  VideoStream.hpp
examples/: CMakeLists.txt  Protonect.cpp  test_opengl_depth_packet_processor.cpp  viewer.cpp  viewer.h
examples/k22v4l/: CMakeLists.txt  README.md  freenect2.cmake.in  k22v4l.cpp
examples/k22v4l/include/libfreenect2/: depth_packet_stream_parser.h  double_buffer.h  libfreenect2.hpp  packet_processor.h  resource.h  threading.h
examples/k22v4l/include/libfreenect2/usb/: transfer_pool.h
examples/k22v4l/src/: cpu_depth_packet_processor.cpp  depth_packet_stream_parser.cpp  double_buffer.cpp  frame_listener_impl.cpp  opencl_depth_packet_processor.cl  opencl_depth_packet_processor.cpp  resource.cpp
examples/k22v4l/src/shader/: debug.fs  filter2.fs
examples/protonect/: CMakeLists.txt  Makefile  Protonect.cpp  Protonect.h  decode.cpp  decode2.cpp  freenect2.cmake.in  viewer.cpp  viewer.h
examples/protonect/cmake_modules/: FindGLFW3.cmake  FindLibUSB.cmake  FindLibUsb-1.0.cmake  FindLibUsb.cmake  FindOpenCL.cmake  FindTurboJPEG.cmake  GenerateResources.cmake  SetupLibfreenect2Threading.cmake
examples/protonect/include/libfreenect2/: async_packet_processor.h  common.h  config.h.in  data_callback.h  depth_packet_processor.h  depth_packet_stream_parser.h  double_buffer.h  frame_listener.h  frame_listener.hpp  frame_listener_impl.h  libfreenect2.hpp  libfreenect2_export.h  logger.h  logging.h  opengl.h  packet_pipeline.h  packet_processor.h  packet_processor_factory.h  registration.h  resource.h  rgb_packet_processor.h  rgb_packet_stream_parser.h  tables.h  threading.h  timer.h
examples/protonect/include/libfreenect2/protocol/: command.h  command_transaction.h  control_command.h  control_transaction.h  response.h  usb_control.h
examples/protonect/include/libfreenect2/usb/: event_loop.h  transfer_pool.h
examples/protonect/src/: command_transaction.cpp  cpu_depth_packet_processor.cpp  cuda_depth_packet_processor.cpp  cuda_depth_packet_processor.cu  depth_packet_processor.cpp  depth_packet_stream_parser.cpp  double_buffer.cpp  event_loop.cpp  flextGL.c  flextGL.h  frame_listener.cpp  frame_listener_impl.cpp  generate_resources.cpp  libfreenect2.cpp  logging.cpp  opencl_depth_packet_processor.cl  opencl_depth_packet_processor.cpp  opengl.cpp  opengl_depth_packet_processor.cpp  p0tables.h  packet_pipeline.cpp  packet_processor_factory.cpp  registration.cpp  resource.cpp  rgb_packet_processor.cpp  rgb_packet_stream_parser.cpp  test_opengl_depth_packet_processor.cpp  test_opengl_dump.cpp  timer.cpp  transfer_pool.cpp  turbo_jpeg_rgb_packet_processor.cpp  usb_control.cpp  vaapi_jpeg_rgb_packet_processor.cpp
examples/protonect/src/shader/: debug.fs  default.vs  filter1.fs  filter2.fs  grayrender.fs  render.vs  stage1.fs  stage2.fs
examples/protonect/src/tinythread/: tinythread.cpp  tinythread.h
examples/ros/kinectv2/: CMakeLists.txt  package.xml
examples/ros/kinectv2/src/: kinectv2.cpp
tools/streamer_recorder/: CMakeLists.txt  PracticalSocket.cpp  ProtonectSR.cpp  README.md  recorder.cpp  streamer.cpp
tools/streamer_recorder/blender_viewer/: blender_viewer.blend
tools/streamer_recorder/blender_viewer/scripts/: main.py
tools/streamer_recorder/include/: PracticalSocket.h  config.h  recorder.h  streamer.h
(+167 files in other folders)
